# playlist-downloader

./: .gitignore  ISSUES.md  LICENSE  MANIFEST.in  MacOs_manual_installation  PROJECT_STRUCTURE.md  README.md  config.yaml.example  fixdocumentation.txt  pyproject.toml  requirements.txt  setup.py
config/: config_example.yaml
scripts/: dev-setup.sh  install-macos.sh  install-windows.ps1  install.sh
spot_downloader/: BenchmarkProject.md  __init__.py  cli.py  config.yaml.example  pyproject.toml
spot_downloader/core/: __init__.py  config.py  database.py  exceptions.py  file_manager.py  logger.py  progress.py
spot_downloader/download/: __init__.py  downloader.py  embed_phase.py  lyrics_phase.py
spot_downloader/spot_downloader/: __init__.py  cli.py
spot_downloader/spot_downloader/core/: __init__.py  config.py  database.py  exceptions.py  logger.py
spot_downloader/spot_downloader/download/: __init__.py  downloader.py  lyrics.py  metadata.py
spot_downloader/spot_downloader/spotify/: fetcher.py  models.py
spot_downloader/spot_downloader/utils/: __init__.py
spot_downloader/spot_downloader/youtube/: matcher.py  models.py
spot_downloader/spotify/: __init__.py  client.py  fetcher.py  models.py
spot_downloader/utils/: __init__.py  replace.py
spot_downloader/youtube/: __init__.py  matcher.py  models.py
src/: __init__.py  main.py
src/audio/: __init__.py  metadata.py  processor.py
src/config/: __init__.py  auth.py  settings.py
src/lyrics/: __init__.py  genius.py  musixmatch.py  processor.py  syncedLyrics.py  syncedlyrics.py  temp.py
src/spotify/: __init__.py  client.py  models.py
src/sync/: __init__.py  synchronizer.py  tracker.py
src/utils/: __init__.py  helpers.py  logger.py  validation.py
src/ytmusic/: __init__.py  downloader.py  searcher.py
tests/: __init__.py  conftest.py  test_basic.py  test_integration.py  test_spotify_models.py  test_utils.py
